# proicl

./: .env.example  .flowignore  .gitignore  AGENTS.md  PROPOSAL.md  README.md  TODO.PROICL.md  TODO.md  pyproject.toml  requirements-light.txt  requirements.txt
configs/: archive_build.yaml  eval.yaml  flow_proicl_a100x1_signal_hold.yaml  flow_proicl_a100x1_smoke_hold.yaml  flow_proicl_a100x2_hold.yaml  flow_proicl_a100x4_hold.yaml  flow_proicl_a100x8_hold.yaml  flow_proicl_a100x8_hold_r2.yaml  flow_proicl_a100x8_signal.yaml  flow_prorl_a100x4_hold.yaml  flow_prorl_a100x4_probe.yaml  flow_vllm_hf_calibration_a100x1.yaml  flow_vllm_hf_calibration_a100x1_hold.yaml  flow_vllm_hf_calibration_b200x1_hold.yaml  prorl_live_resources.json  sps_recovery_archive.yaml  sps_recovery_eval.yaml
constraints/: proicl-eval.txt
data/locks/: datasets.lock.json
data/prorl_recovery_archives/: direct.json  reasoning_gym_direct.json  reasoning_gym_seed_archive.json  rws_math_direct.json  seed_archive.json
docs/: CLOUDRIFT_RECOVERY_RUNBOOK.md  POLARIS_LIVE_OPS.md  PROICL_FAST_WEIGHT_RECOVERY_AUDIT.md  PRORL_RECOVERY_AUDIT.md
runs/: README.md  progress.md
scripts/: analyze_results.py  audit_proicl_artifacts.py  backend_preflight.py  build_mapelite.py  build_polaris_archive.py  calibrate_sps.py  check_protocol_sync.sh  check_sps_calibration.py  derive_prorl_phase3_input.py  estimate_cloudrift_cost.py  farmshare.py  flow_launch_proicl_a100x8_prelim.py  flow_launch_proicl_signal.py  flow_proicl_partition_controller.py  flow_prorl_a100x4_probe.sh  flow_vllm_hf_calibration_standalone.py  launch_prorl_recovery.py  lock_datasets.py  materialize_prorl_phase3_trajectories.py  modal_app.py  modal_vllm_app.py  package_results.py  package_sps_results.py  plan_production_runs.py  run_backend_preflight.sh  run_condition.py  run_experiment.sh  run_experiment_a100.sh  run_experiment_h100.sh  run_experiment_l40.sh  run_math500.py  run_mentor_sps_experiment.sh  run_modal_smoke.sh  run_modal_sps_smoke.sh  run_proicl.py  run_proicl_signal.py  run_prorl_recovery.py  run_sps_recovery_experiment.sh  score_prorl_trajectories.py  smoke_polaris_readiness.py  (+5 more)
src/polaris/: __init__.py  (+6 more)
upstream/: README.md
(+99 files in other folders)
