[project]
name = "proicl"
version = "0.2.0"
description = "ProICL: inference-time composition for RL-style reasoning gains (frozen base model + prompt-archive spread + scalable power sampling + verifier-gated memory)"
requires-python = ">=3.11,<3.13"
dependencies = [
  "accelerate",
  "datasets==4.0.0",
  "huggingface-hub>=0.33.0,<1.0",
  "numpy>=1.26,<2.3",
  "pandas>=2.2,<3",
  "pyarrow==18.1.0",
  "pylatexenc",
  "reasoning-gym==0.1.25",
  "scipy",
  "sympy",
  "torch",
  "tqdm",
  "transformers==4.51.3",
  "wandb",
]

[project.optional-dependencies]
code = [
  # Required when running the HumanEval+ code track (vendored evalplus)
  "appdirs",
  "termcolor",
  "tree-sitter",
  "tree-sitter-python",
  "wget",
]
dc = [
  # Required when running the Dynamic Cheatsheet comparator (vendored dc)
  "python-dotenv",
  "scikit-learn",
  "tiktoken",
]
gepa_reflection = [
  # Required for live xAI/OpenAI-compatible GEPA reflection calls.
  "litellm",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
